# akiradb

./: .gitignore  Cargo.toml  README.md  cargo-test.sh  final.term  git_message.sh
ingest/: Cargo.toml  text.term
ingest/src/: fst.rs  lib.rs  tokenizer.rs
query/: Cargo.toml
raft/: Cargo.toml
src/: apache.rs  lib.rs
src/store/: schema.rs
src/util/: config.rs  file.rs
store/: Cargo.toml
store/src/: builder.rs  lib.rs  schema.rs  table.rs
wal/: Cargo.toml  file.db
wal/src/: lib.rs
