[package]
name = "akiradb"
version = "0.1.0"
authors = ["Arvind <mhtocs@gmail.com>"]
edition = "2018"


[workspace]
members = ["wal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenv = "0.15"
pretty_env_logger = "0.4.0"
log = "0.4.8"
structopt = "0.3"
anyhow = "1.0"
regex = "1.4.3"
lazy_static = "1.4.0"
rayon = "1.5.0"
roaring = "0.6.0"
flate2 = "1.0.20"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
bincode = "1.3.2"
snap = "1.0.4"
# arrow = "3.0.0"
# dmsort = "1.0.0"
# parquet = "3.0.0"
datafusion = "3.0.0"
byteorder = "1.4.3"
wal = {path = "wal"}
store = {path = "store"}
raft = {path = "raft"}
ingest = {path = "ingest"}
query = {path = "query"}
skiplist = "0.3"
