[package]
name = "ingest"
version = "0.1.0"
authors = ["Arvind <mhtocs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
store = {path = "../store"}
arrayvec = "0.7"
fst = "0.4.5"
skiplist = "0.3"
byte_set = "0.1.3"
#regex-automata = { version = "0.1.9", features = ["transducer"]}



[dev-dependencies]
pretty_assertions = "0.7.2"
