[package]
name = "store"
version = "0.1.0"
authors = ["Arvind <mhtocs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "3.0.0"
anyhow = "1.0"
fs2 = "0.4.3"


[dev-dependencies]
pretty_assertions = "0.7.2"
