[package]
name = "wal"
version = "0.1.0"
authors = ["Arvind <mhtocs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
fs2 = "0.4.3"
num_cpus = "1.0"
advisory-lock = "0.3.0"
